# distributed-systems

unique-id-generator/: README.md  main.py  pyproject.toml  ruff.toml
url-shortener/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  loading_test.jmx  main.py  nginx.conf  pyproject.toml
url-shortener/app/config/: cache.py  database.py  settings.py
url-shortener/app/controllers/: long_url_controller.py  url_shortener_controller.py
url-shortener/app/models/: url.py
url-shortener/app/repositories/: cache_repository.py  i_cache_repository.py  i_url_repository.py  url_repository.py
url-shortener/app/services/: hasher_service.py  i_hasher_service.py  i_unique_id_generator.py  long_url_service.py  unique_id_generator_service.py  url_shortener_service.py
